Adjustments to the different measurement methods